# SimpleMetro

./: .gitignore  CMakeLists.txt  Makefile  Metronome.h  MetronomeLinux.cc  MetronomeMac.mm  MetronomeWin.cc  README.md  main.cc
.github/workflows/: build.yml
